# camunda-kafka-pipeline

./: .gitignore  README.md
bpmn/: .bpmnlintrc  ConfirmOrderForm.form  order-kafka-process.bpmn  order-lifecycle.bpmn
data-creator/: describe_schema.py  producer.py  pyproject.toml
data-creator/generators/: all_order_v2.py
docs/: deployment.md  kafka-ssl-pfx-guide.md  project-structure.drawio  status-transition-validation.md  statuses-lines.md  statuses.md
infra/: camunda-k3s-setup.sh
kafka/: docker-compose.yml  gen-certs.sh
order-manager/: AvroMapper.cs  AvroSyncAdapter.cs  Dockerfile  OrderManager.csproj  Program.cs  appsettings.json
order-manager/Controllers/: OrdersController.cs
order-manager/Hubs/: OrderHub.cs
order-manager/Middleware/: BasicAuthMiddleware.cs
order-manager/Models/: OrderModels.cs  StatusInfo.cs
order-manager/Services/: KafkaConsumerService.cs  KafkaProducerService.cs  OrderGeneratorService.cs  OrderStateService.cs
order-manager/wwwroot/: index.html
schemas/: all_order_v2.json  all_order_v2.min.json  all_order_v2.string.json
worker/: pyproject.toml  worker.py
