[project]
name = "data-creator"
version = "0.1.0"
description = "Kafka Avro producer — генерация и отправка тестовых заказов в Kafka"
requires-python = ">=3.11"
dependencies = [
    "attrs>=26.1.0",
    "authlib>=1.7.2",
    "cachetools>=7.1.4",
    "certifi>=2026.5.20",
    "confluent-kafka>=2.14.0",
    "cryptography>=42.0.0",
    "fastavro>=1.12.2",
    "httpx>=0.28.1",
    "rich>=15.0.0",
]
